# node-blaze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  prepare  prepare.ts  publish-to-npm.ts  rollup.config.js  tsconfig.json
benchmark/: benchmark.ts
lib/: binding.js  blaze.ts
src/: blaze_node.cc  blaze_node.h  node_blaze.cc  node_blaze.h
test/: basic.spec.ts  performance.ts  test_binding.js  test_binding.ts
